<resources>
    <string name="app_name">JK Dairy Hub</string>
    <string name="forgot_password">Forgot PASSWORD!</string>
    <string name="or_use">OR USE</string>
    <string name="configure">configure</string>
    <string name="powered_by">Powered by @</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JK\'s Dairy Hub</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_customer">Customers</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="add">ADD</string>
</resources>