<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".App.Activities.AuthActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/img_logo_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/lay_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_logo_container"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="80dp"
                    android:paddingLeft="65dp"
                    android:paddingRight="65dp">

                    <LinearLayout
                        android:id="@+id/lay_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/ic_person" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <com.jksdairyhub.jksdairyhub.App.Controls.MyEditText
                                android:id="@+id/edt_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:background="#00000000"
                                android:hint="@string/username"
                                android:inputType="text"
                                android:letterSpacing="0.1"
                                android:textColor="#000"
                                android:textColorHint="#595c60"
                                android:textSize="16sp" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lay_user_ul"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#4a5a71"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:id="@+id/lay_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/ic_key" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.jksdairyhub.jksdairyhub.App.Controls.MyEditText
                                android:id="@+id/edt_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:background="#00000000"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:letterSpacing="0.1"
                                android:textColor="#000"
                                android:textColorHint="#595c60"
                                android:textSize="16sp" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lay_pass_ul"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#4a5a71"
                        android:orientation="horizontal" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lay_controls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <FrameLayout
                            android:id="@+id/view_switcher"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ProgressBar
                                android:id="@+id/progress_login"
                                style="?android:attr/progressBarStyle"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:visibility="gone"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                            <!--#536dfe blue btn color-->
                            <com.jksdairyhub.jksdairyhub.App.Controls.MyTextView
                                android:id="@+id/btn_login"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/bg_login_btn"
                                android:elevation="3dp"
                                android:gravity="center"
                                android:letterSpacing="0.2"
                                android:paddingTop="15dp"
                                android:paddingBottom="15dp"
                                android:text="@string/login"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="normal" />
                        </FrameLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/txt_footer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:letterSpacing="0.1"
                            android:text="@string/forgot_password"
                            android:textColor="#595c60"
                            android:visibility="gone" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/img_finger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <com.jksdairyhub.jksdairyhub.App.Controls.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/or_use"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/colorTextDark"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_fingerprint"
                            android:visibility="visible" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp">

                    <com.jksdairyhub.jksdairyhub.App.Controls.MyTextView
                        android:id="@+id/btn_configure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/configure"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/colorTextDark"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>

    <com.jksdairyhub.jksdairyhub.App.Controls.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/powered_by"
        android:textAlignment="center"
        android:textColor="#212121" />
</RelativeLayout>